--- a/pages/common/404.ui
+++ b/pages/common/404.ui
@@ -2,8 +2,8 @@
   <ui-page class="ui-404" style="height:{{height}}px">
     <ui-view class="ui-404-inner">
       <ui-image src="{{ img }}" width="150" height="97"></ui-image>
-      <ui-view class="tip">路径错误或没有在配置项中注册</ui-view>
-      <ui-button bindtap="handleBack">返回</ui-button>
+      <ui-view class="tip">404 Wrong path or not registered in configuration item 路径错误或没有在配置项中注册</ui-view>
+      <ui-button bindtap="handleBack">Back 返回</ui-button>
     </ui-view>
   </ui-page>
 </template>
