--- a/pages/index.ui
+++ b/pages/index.ui
@@ -1,10 +1,10 @@
 <template>
-  <ui-page>
+  <ui-page class="page">
       <ui-view class="sliderContent" ui:if="{{isShow}}">
         <ui-slider width="260"></ui-slider>      
       </ui-view>
       <ui-view class="buttonContent">
-        <ui-button type="primary" bindtap="sliderShow">创建滑动条控件</ui-button>
+        <ui-button type="primary" bindtap="sliderShow">Show slider control创建滑动条控件</ui-button>
         <ui-button type="primary" bindtap="navHandle">{{ buttonText }}</ui-button>
       </ui-view>
   </ui-page>
@@ -30,6 +30,9 @@ export default {
     navHandle() {
       ui.navigateTo({
         url: "/pages/detail"
+        // navigateTo and redirectTo could pass naive data through query parameter
+        //  e.g. /pages/detail?myValue=hello
+
       });
     }
   },
@@ -39,7 +42,7 @@ export default {
     setTimeout(() => {
       //关闭app启动图
       ui.closeSplashscreen();
-    }, 3500);
+    }, 500);
   }
 };
 </script>
