Http requests for json autocomplete places api works foriOS and Android but need to disable CORS security on chrome browser for web debugging

--- a/app.ui
+++ b/app.ui
@@ -7,6 +7,7 @@ export default {
       "pages/helloWorldPage",
       "pages/recipientWorldHello",
       "pages/mapSearchSample",
+      "pages/mapSearchTips"
     ],
     theme: {
       "theme-color": "#3399ff"
