--- a/pages/helloWorldPage.ui
+++ b/pages/helloWorldPage.ui
@@ -3,7 +3,7 @@
   <ui-page class="pageContent">
     <ui-view class="viewContent">
       <ui-button type="primary" plain="true">First button: Redirect to page -  </ui-button>
-      <ui-button type="primary" bindTap="navHandle" plain="true">Second button: Navigate to page - Send object to second page.</ui-button>
+      <ui-button type="primary" bindtap="navHandle" plain="true">Second button: Navigate to page - Send object to second page.</ui-button>
       <ui-input placeholder="autocomplete text box"
                 ui:model='{{autocompleteText}}'>
       </ui-input>
@@ -49,12 +49,15 @@ export default {
   },
   methods: {
     navHandle() {
+      console.log("nav");
       ui.navigateTo({
-        url
+        url: "/pages/recipientWorldHello"
       });
     }
   },
-  mounted() {}
+  mounted() {
+    console.log("HelloWorldPage:: mounted:: ");
+  }
 };
 </script>
 
