--- a/pages/mapSearchSample.ui
+++ b/pages/mapSearchSample.ui
@@ -3,6 +3,7 @@
 <template>
     <ui-page height="{{conHeight}}">
       test
+      Google Maps JavaScript & Places API key: AIzaSyBFGkLSAHdWvjFH870eSyhWFawW_F78enU
       <ui-view bindtap="searchShow(flag)" class="section {{show?'sectionBack':''}}">
         <ui-row>
           <ui-col vertical-align="middle">
@@ -134,15 +135,20 @@ export default {
       this.show = true;
       // - FIXME: that = this!?!?!?!?! Why does the sample need to maintain reference to old copy of page
       const that = this;
+      console.log("ui request")
       ui.request({
         url: "https://maps.googleapis.com/maps/api/place/autocomplete/json",
+        header: {'Access-Control-Allow-Origin': "*"}, 
+        type: "GET",
         data: {
           input: this.keywords,
           language: "en",
-          key: "AIzaSyAkMGyXxYXxJkWR1VJmGaa66ma-2Ni13kQ"
+          key: "AIzaSyBFGkLSAHdWvjFH870eSyhWFawW_F78enU"
         },
+        // - BUG: ISSUE: Access-Control-Allow-Origin", "*" CORS issue XmlHttpRequest.
         success: res => {
           that.tips = res.data.predictions;
+          console.log("places api autocomplete success", res);
         }
       });
     },
@@ -238,7 +244,7 @@ export default {
     // - FIXME: Undocumented "flag" variable in the SAMPLE CODE.~ >5 undocumented flags.
     searchShow() {
       this.show = true;
-      if (this.flag === 0 ) {
+      if (this.flag === 0) {
         this.keywords = this.tempKeywords;
       } else if (this.flag === 1) {
         return false;
@@ -251,6 +257,109 @@ export default {
 };
 </script>
 
-<style lang="less">
 
+  <style lang="less">
+// mapSearchTips.less
+.analogSearch {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  height: 33px;
+  line-height: 33px;
+  padding: 0 12px;
+  color: #797474;
+}
+.infobox {
+  padding: 10px 20px;
+  .mix-1px(0, 0, 1, 0, #ccc);
+  .info-1 {
+    font-size: 18px;
+    padding-right: 5px;
+  }
+  .overflow {
+    .mix-text-overflow();
+  }
+  .info-2 {
+    font-size: 12px;
+  }
+  .info-3 {
+    font-size: 12px;
+    color: #666;
+  }
+}
+
+.section {
+  padding: 5px 20px;
+  position: absolute;
+  width: 100%;
+  height: 46px;
+  z-index: 9;
+  input {
+    width: 100%;
+    height: 30px;
+    border-radius: 5px;
+    outline: none;
+  }
+}
+
+.sectionBack {
+  background-color: #fff;
+}
+
+.querySearch {
+  position: absolute;
+  width: 100%;
+  z-index: 9;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+.text_box {
+  padding: 10px 20px;
+  line-height: 20px;
+}
+.map .section {
+  margin-bottom: 0;
+}
+
+.c-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.info {
+  max-width: 180px;
+  .mix-text-overflow();
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin-right: 25px;
+  p {
+    padding: 0 5px;
+  }
+}
+.a-name {
+  font-size: 14px;
+  color: #000;
+  line-height: 20px;
+}
+.a-info {
+  width: 100%;
+  font-size: 12px;
+  color: #000;
+  line-height: 16px;
+  .mix-text-overflow();
+}
+.click {
+  position: absolute;
+  left: calc(100% - 6px);
+  top: 0;
+  width: 50px;
+  height: 100%;
+  background-color: #ff6600;
+  line-height: 48px;
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+  border-radius: 0 10px 10px 0;
+}
 </style>
